--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,26 @@
+html, body {
+    min-height: 100%;
+}
+
 body {
+    position: relative;
     background:#65647C;
     color: rgb(235, 209, 241);
 }
 
-button {
+body:after {
+    display: none;
+    display: block;
+    position: fixed; /* could also be absolute */ 
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+    background-color: rgba(0,0,0,0.2);
+}
+
+.weapon {
     background: #F1D3B3;
     border-radius: 15px;
     border: 1px solid #8B7E74;
@@ -72,23 +89,31 @@ button {
     height: 107.84px;
 }
 
-#end-screen-container {
-    position: fixed;
-    z-index: 101;
-    width: 600px;
-    height: 400px;
-    background-color: rgb(241, 181, 120);
-}
-
-#end-screen-content {
-    width: 400px;
-    height: 200px;
-    padding: 20px;
-    background-color: burlywood;
-    margin: 80 auto;
+.modal {
+    z-index: 10;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -180px;
+    margin-top: -73px;
+    width: 300px;
+    padding: 30px;
+    border-radius: 15px;
     text-align: center;
+    background-color: gray;
 }
 
-.end-screen {
+.overlay {
+    z-index: 9;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.6;
+  }
+
+  .end-screen {
     display: none;
-}
+  }
